added pixel neet ui for mobile and desktop  , admin layout and navigation
