# Backend/models/user.js
@@ -22,10 +22,6 @@ const userSchema = new Schema({
         type: Schema.Types.ObjectId,
         ref: 'Role',
       },
-      phoneNumber:{
-        type: String
-      }
-    
   });
 
 
